--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@prisma/client": "^4.5.0"
+	}
 }
