--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,50 @@
 {
 	"cSpell.words": [
+		"autoincrement",
+		"datasource",
 		"onresult",
 		"onvoiceschanged"
+	],
+	"cSpell.enabledLanguageIds": [
+		"asciidoc",
+		"c",
+		"cpp",
+		"csharp",
+		"css",
+		"elixir",
+		"erlang",
+		"git-commit",
+		"go",
+		"graphql",
+		"handlebars",
+		"haskell",
+		"html",
+		"jade",
+		"java",
+		"javascript",
+		"javascriptreact",
+		"json",
+		"jsonc",
+		"jupyter",
+		"latex",
+		"less",
+		"markdown",
+		"php",
+		"plaintext",
+		"python",
+		"pug",
+		"restructuredtext",
+		"rust",
+		"scala",
+		"scss",
+		"scminput",
+		"swift",
+		"text",
+		"typescript",
+		"typescriptreact",
+		"vue",
+		"yaml",
+		"yml",
+		"prisma"
 	]
 }
