言語を選択してデータベースからテキストを抽出する #34

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
 		"autoincrement",
 		"datasource",
 		"onresult",
-		"onvoiceschanged"
+		"onvoiceschanged",
+		"sveltejs"
 	],
 	"cSpell.enabledLanguageIds": [
 		"asciidoc",
