Save speech sound data #58

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+
+SOUND_DIR="/Users/iwasakishinya/development/talk/.data/"
