Translate by DeepL #66

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@
 DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
 
 SOUND_DIR="/Users/iwasakishinya/development/talk/.data/"
+DEEPL_AUTH_KEY="{deepl-auth-key}"
