Refactoring source code #75

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,10 @@
 		"deepl",
 		"onresult",
 		"onvoiceschanged",
-		"sveltejs"
+		"protos",
+		"sveltejs",
+		"texttospeech",
+		"Wavenet"
 	],
 	"cSpell.enabledLanguageIds": [
 		"asciidoc",
