Use Microsoft Synthesize speech #130

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,20 @@
 {
 	"cSpell.words": [
+		"Alfie",
 		"autoincrement",
+		"cognitiveservices",
 		"datasource",
 		"deepl",
+		"japanwest",
+		"Keita",
 		"onresult",
 		"onvoiceschanged",
+		"Piseth",
 		"protos",
 		"sveltejs",
 		"texttospeech",
-		"Wavenet"
+		"Wavenet",
+		"Xiao"
 	],
 	"cSpell.enabledLanguageIds": [
 		"asciidoc",
