--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
 
 SOUND_DIR="/Users/iwasakishinya/development/talk/.data/"
 DEEPL_AUTH_KEY="{deepl-auth-key}"
+
+SPEECH_KEY="XXX"
