--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@google-cloud/translate": "^7.0.5",
 		"@prisma/client": "^4.8.0",
 		"deepl-node": "^1.7.2",
+		"microsoft-cognitiveservices-speech-sdk": "^1.24.1",
 		"svelte-i18n": "^3.6.0"
 	}
 }
