Migrate to Google Translation Advanced from Basic #137

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
-
 SOUND_DIR="/Users/iwasakishinya/development/talk/.data/"
+
+GOOGLE_PROJECT_ID="XXX"
+MICROSOFT_SPEECH_KEY="XXX"
 DEEPL_AUTH_KEY="{deepl-auth-key}"
 
-SPEECH_KEY="XXX"
+# .zshrc
+# export GOOGLE_APPLICATION_CREDENTIALS="/Users/iwasakishinya/development/talk/.secret/talk-370811-f3fc71499f09.json"
