Create and use glossaries #139

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
 SOUND_DIR="/Users/iwasakishinya/development/talk/.data/"
 
 GOOGLE_PROJECT_ID="XXX"
+GOOGLE_LOCATION='XXX'
 MICROSOFT_SPEECH_KEY="XXX"
 DEEPL_AUTH_KEY="{deepl-auth-key}"
 
