pin_code auth lib implemented #141

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,8 @@ GOOGLE_LOCATION='XXX'
 MICROSOFT_SPEECH_KEY="XXX"
 DEEPL_AUTH_KEY="{deepl-auth-key}"
 
+GMAIL_USER="username@gmail.com"
+GMAIL_PASS="google_app_password"
+
 # .zshrc
 # export GOOGLE_APPLICATION_CREDENTIALS="/Users/iwasakishinya/development/talk/.secret/talk-370811-f3fc71499f09.json"
