--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@playwright/test": "^1.29.1",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.1",
+		"@types/nodemailer": "^6.4.7",
 		"@typescript-eslint/eslint-plugin": "^5.47.0",
 		"@typescript-eslint/parser": "^5.47.0",
 		"eslint": "^8.30.0",
@@ -38,6 +39,7 @@
 		"@prisma/client": "^4.8.0",
 		"deepl-node": "^1.7.2",
 		"microsoft-cognitiveservices-speech-sdk": "^1.24.1",
+		"nodemailer": "^6.8.0",
 		"svelte-i18n": "^3.6.0"
 	}
 }
