--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
 		"@types/nodemailer": "^6.4.7",
 		"@typescript-eslint/eslint-plugin": "^5.47.0",
 		"@typescript-eslint/parser": "^5.47.0",
+		"autoprefixer": "^10.4.13",
 		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.21",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
 		"prisma": "^4.8.0",
 		"svelte": "^3.55.0",
 		"svelte-check": "^2.10.3",
 		"svelte-preprocess": "^5.0.0",
+		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.3"
