refactor: Clean PIN code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,14 +3,20 @@
 		"Alfie",
 		"autoincrement",
 		"cognitiveservices",
+		"Consolas",
 		"datasource",
 		"deepl",
 		"japanwest",
 		"Keita",
+		"Menlo",
+		"Neue",
+		"Noto",
 		"onresult",
 		"onvoiceschanged",
 		"Piseth",
 		"protos",
+		"Roboto",
+		"Segoe",
 		"sveltejs",
 		"tailwindcss",
 		"texttospeech",
