Revert "Revert "Merge branch 'main' into 142-create-translation-page""
This reverts commit f0aaa9a79506530f7a5c141693df63bcf350da5d.

--- a/package.json
+++ b/package.json
@@ -1,49 +1,48 @@
 {
-	"name": "talk",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "playwright test",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.29.1",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.1",
-		"@types/nodemailer": "^6.4.7",
-		"@typescript-eslint/eslint-plugin": "^5.47.0",
-		"@typescript-eslint/parser": "^5.47.0",
-		"autoprefixer": "^10.4.13",
-		"eslint": "^8.30.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.1",
-		"prettier-plugin-svelte": "^2.9.0",
-		"prisma": "^4.8.0",
-		"svelte": "^3.55.0",
-		"svelte-check": "^2.10.3",
-		"svelte-preprocess": "^5.0.0",
-		"tailwindcss": "^3.2.4",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.4",
-		"vite": "^4.0.3",
-		"vite-imagetools": "^4.0.17"
-	},
-	"type": "module",
-	"dependencies": {
-		"@google-cloud/text-to-speech": "^4.1.0",
-		"@google-cloud/translate": "^7.0.5",
-		"@prisma/client": "^4.8.0",
-		"deepl-node": "^1.7.2",
-		"microsoft-cognitiveservices-speech-sdk": "^1.24.1",
-		"nodemailer": "^6.8.0",
-		"svelte-i18n": "^3.6.0"
-	}
+  "name": "talk",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "playwright test",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.30.0",
+    "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/kit": "^1.0.1",
+    "@types/nodemailer": "^6.4.7",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.1",
+    "prettier-plugin-svelte": "^2.9.0",
+    "prisma": "^4.8.0",
+    "svelte": "^3.55.0",
+    "svelte-check": "^2.10.3",
+    "svelte-preprocess": "^5.0.0",
+    "tailwindcss": "^3.2.4",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3"
+  },
+  "type": "module",
+  "dependencies": {
+    "@google-cloud/text-to-speech": "^4.1.0",
+    "@google-cloud/translate": "^7.0.5",
+    "@prisma/client": "^4.8.0",
+    "deepl-node": "^1.7.2",
+    "microsoft-cognitiveservices-speech-sdk": "^1.24.1",
+    "nodemailer": "^6.8.0",
+    "svelte-i18n": "^3.6.0"
+  }
 }
