--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
 	"cSpell.words": [
 		"Alfie",
 		"autoincrement",
+		"codegen",
 		"cognitiveservices",
+		"combobox",
 		"Consolas",
 		"datasource",
 		"deepl",
