chore: Add SpeechRecognition types

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@playwright/test": "^1.30.0",
     "@sveltejs/adapter-auto": "^1.0.0",
     "@sveltejs/kit": "^1.0.1",
+    "@types/dom-speech-recognition": "^0.0.1",
     "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
