--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,5 +73,8 @@
 		"src/routes/api/languages",
 		"src/routes/api/locales"
 	],
-	"i18n-ally.keystyle": "nested"
+	"i18n-ally.keystyle": "nested",
+	"vitest.include": [
+		"**/*.test.ts"
+	],
 }
