--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
+		"types": [
+			"vitest/importMeta"
+		],
 		"allowJs": true,
 		"checkJs": true,
 		"esModuleInterop": true,
