Update tsconfig.json #339

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,7 @@
 		"prisma.prisma",
 		"fivethree.vscode-svelte-snippets",
 		"svelte.svelte-vscode",
-		"gruntfuggly.todo-tree"
+		"gruntfuggly.todo-tree",
+		"csstools.postcss"
 	]
 }
