Use adapter-node #349 Change server-side fetch implementation

--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.30.0",
+    "@playwright/test": "^1.31.1",
     "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.7.2",
+    "@sveltejs/adapter-node": "^1.2.0",
+    "@sveltejs/kit": "^1.8.3",
     "@types/dom-speech-recognition": "^0.0.1",
     "@types/nodemailer": "^6.4.7",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
@@ -36,13 +37,13 @@
     "tailwindcss": "^3.2.7",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
-    "vite": "^4.1.2",
+    "vite": "^4.1.4",
     "vitest": "^0.28.5"
   },
   "type": "module",
   "dependencies": {
     "@google-cloud/text-to-speech": "^4.2.1",
-    "@google-cloud/translate": "^7.1.1",
+    "@google-cloud/translate": "^7.2.0",
     "@prisma/client": "^4.10.1",
     "deepl-node": "^1.8.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.25.1",
