--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "deepl-node": "^1.8.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.25.1",
     "nodemailer": "^6.9.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "svelte-i18n": "^3.6.0",
     "uuid": "^9.0.0"
   }
