--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@google-cloud/translate": "^7.2.0",
     "@prisma/client": "^4.10.1",
     "deepl-node": "^1.8.0",
+    "express": "^4.18.2",
     "microsoft-cognitiveservices-speech-sdk": "^1.25.1",
     "nodemailer": "^6.9.1",
     "socket.io": "^4.6.1",
