--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sveltejs/adapter-node": "^1.2.0",
     "@sveltejs/kit": "^1.8.3",
     "@types/dom-speech-recognition": "^0.0.1",
+    "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
