--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"types": [
-			"vitest/importMeta"
-		],
+		"types": ["vitest/importMeta"],
 		"allowJs": true,
 		"checkJs": true,
 		"esModuleInterop": true,
@@ -25,7 +23,7 @@
 		"exactOptionalPropertyTypes": true,
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
+		"noFallthroughCasesInSwitch": true
 		// "noUncheckedIndexedAccess": true,
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
