--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node ./server.js",
+    "start": "npx tsx server.ts",
     "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "^5.53.0",
     "@vite-pwa/sveltekit": "^0.1.3",
     "autoprefixer": "^10.4.13",
+    "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -39,6 +40,7 @@
     "svelte-preprocess": "^5.0.1",
     "tailwindcss": "^3.2.7",
     "tslib": "^2.5.0",
+    "tsx": "^3.12.5",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vitest": "^0.28.5"
