--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write ."
   },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@playwright/test": "^1.31.1",
     "@sveltejs/adapter-auto": "^2.0.0",
