--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,6 +16,7 @@
 		"gruntfuggly.todo-tree",
 		"csstools.postcss",
 		"zixuanchen.vitest-explorer",
-		"bradlc.vscode-tailwindcss"
+		"bradlc.vscode-tailwindcss",
+		"ms-vsliveshare.vsliveshare"
 	]
 }
