--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
     "prisma": "^4.11.0",
+    "stylelint": "^15.3.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "svelte": "^3.55.1",
     "svelte-check": "^3.0.3",
     "svelte-preprocess": "^5.0.1",
