--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/dom-speech-recognition": "^0.0.1",
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.7",
+    "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
@@ -57,11 +58,13 @@
     "@prisma/client": "^4.11.0",
     "@socket.io/cluster-adapter": "^0.2.1",
     "@socket.io/pm2": "^5.2.2",
+    "@socket.io/redis-adapter": "^8.1.0",
     "@socket.io/sticky": "^1.0.3",
     "deepl-node": "^1.8.0",
     "express": "^4.18.2",
     "microsoft-cognitiveservices-speech-sdk": "^1.26.0",
     "nodemailer": "^6.9.1",
+    "redis": "^4.6.5",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "svelte-i18n": "^3.6.0",
