--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sveltejs/kit": "^1.13.0",
     "@types/dom-speech-recognition": "^0.0.1",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/nodemailer": "^6.4.7",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.1",
@@ -63,6 +64,7 @@
     "deepl-node": "^1.8.0",
     "express": "^4.18.2",
     "microsoft-cognitiveservices-speech-sdk": "^1.26.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "redis": "^4.6.5",
     "socket.io": "^4.6.1",
