--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -30,6 +30,7 @@
 		"ardenivanov.svelte-intellisense",
 		"wix.vscode-import-cost",
 		"christian-kohler.path-intellisense",
-		"chakrounanas.turbo-console-log"
+		"chakrounanas.turbo-console-log",
+		"github.vscode-github-actions"
 	]
 }
