--- a/package.json
+++ b/package.json
@@ -1,78 +1,86 @@
 {
-  "name": "talk",
-  "version": "0.28.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start": "npx tsx ./server/index.ts",
-    "test": "playwright test",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test:unit": "vitest",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
-  "prisma": {
-    "seed": "npx tsx prisma/seed.ts"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.31.2",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-node": "^1.2.3",
-    "@sveltejs/kit": "^1.13.0",
-    "@types/dom-speech-recognition": "^0.0.1",
-    "@types/express": "^4.17.17",
-    "@types/morgan": "^1.9.4",
-    "@types/nodemailer": "^6.4.7",
-    "@types/redis": "^4.0.11",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "@vite-pwa/sveltekit": "^0.1.3",
-    "autoprefixer": "^10.4.14",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "prettier-plugin-svelte": "^2.9.0",
-    "prisma": "^4.11.0",
-    "stylelint": "^15.3.0",
-    "stylelint-config-standard-scss": "^7.0.1",
-    "svelte": "^3.57.0",
-    "svelte-check": "^3.1.4",
-    "svelte-preprocess": "^5.0.3",
-    "tailwindcss": "^3.2.7",
-    "tslib": "^2.5.0",
-    "tsx": "^3.12.6",
-    "typescript": "^5.0.2",
-    "vite": "^4.2.1",
-    "vitest": "^0.29.7"
-  },
-  "type": "module",
-  "dependencies": {
-    "@google-cloud/text-to-speech": "^4.2.1",
-    "@google-cloud/translate": "^7.2.0",
-    "@prisma/client": "^4.11.0",
-    "@socket.io/cluster-adapter": "^0.2.1",
-    "@socket.io/pm2": "^5.2.2",
-    "@socket.io/redis-adapter": "^8.1.0",
-    "@socket.io/sticky": "^1.0.3",
-    "deepl-node": "^1.8.0",
-    "express": "^4.18.2",
-    "microsoft-cognitiveservices-speech-sdk": "^1.26.0",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.1",
-    "redis": "^4.6.5",
-    "socket.io": "^4.6.1",
-    "socket.io-client": "^4.6.1",
-    "svelte-i18n": "^3.6.0",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2",
-    "winston-console-format": "^1.0.8",
-    "winston-daily-rotate-file": "^4.7.1"
-  }
+	"name": "talk",
+	"version": "0.28.0",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"start": "npx tsx ./server/index.ts",
+		"test": "playwright test",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:unit": "vitest",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"prepare": "husky install"
+	},
+	"prisma": {
+		"seed": "npx tsx prisma/seed.ts"
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.31.2",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.2.3",
+		"@sveltejs/kit": "^1.13.0",
+		"@types/dom-speech-recognition": "^0.0.1",
+		"@types/express": "^4.17.17",
+		"@types/morgan": "^1.9.4",
+		"@types/nodemailer": "^6.4.7",
+		"@types/redis": "^4.0.11",
+		"@types/uuid": "^9.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.56.0",
+		"@typescript-eslint/parser": "^5.56.0",
+		"@vite-pwa/sveltekit": "^0.1.3",
+		"autoprefixer": "^10.4.14",
+		"dotenv": "^16.0.3",
+		"eslint": "^8.36.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.2.0",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.6",
+		"prettier-plugin-svelte": "^2.9.0",
+		"prisma": "^4.11.0",
+		"stylelint": "^15.3.0",
+		"stylelint-config-standard-scss": "^7.0.1",
+		"svelte": "^3.57.0",
+		"svelte-check": "^3.1.4",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.2.7",
+		"tslib": "^2.5.0",
+		"tsx": "^3.12.6",
+		"typescript": "^5.0.2",
+		"vite": "^4.2.1",
+		"vitest": "^0.29.7"
+	},
+	"type": "module",
+	"dependencies": {
+		"@google-cloud/text-to-speech": "^4.2.1",
+		"@google-cloud/translate": "^7.2.0",
+		"@prisma/client": "^4.11.0",
+		"@socket.io/cluster-adapter": "^0.2.1",
+		"@socket.io/pm2": "^5.2.2",
+		"@socket.io/redis-adapter": "^8.1.0",
+		"@socket.io/sticky": "^1.0.3",
+		"deepl-node": "^1.8.0",
+		"express": "^4.18.2",
+		"microsoft-cognitiveservices-speech-sdk": "^1.26.0",
+		"morgan": "^1.10.0",
+		"nodemailer": "^6.9.1",
+		"redis": "^4.6.5",
+		"socket.io": "^4.6.1",
+		"socket.io-client": "^4.6.1",
+		"svelte-i18n": "^3.6.0",
+		"uuid": "^9.0.0",
+		"winston": "^3.8.2",
+		"winston-console-format": "^1.0.8",
+		"winston-daily-rotate-file": "^4.7.1"
+	},
+	"lint-staged": {
+		"*.{js,ts}": "eslint --cache --fix",
+		"*.css": "stylelint --fix",
+			"*.{js,css,md,ts}": "prettier --write"
+	}
 }
