--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"start": "npx tsx ./server/index.ts",
-		"test": "playwright test",
+		"test": "vitest",
+		"test:run": "vitest run",
+		"test:e2e": "playwright test",
+		"test:ci": "CI=true npm run test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"prepare": "husky install"
@@ -32,6 +34,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"@vite-pwa/sveltekit": "^0.1.3",
+		"@vitest/coverage-c8": "^0.29.8",
 		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.0.3",
 		"eslint": "^8.36.0",
