--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"prettier-plugin-svelte": "^2.9.0",
 		"prisma": "^4.11.0",
 		"stylelint": "^15.3.0",
+		"stylelint-config-standard": "^31.0.0",
 		"stylelint-config-standard-scss": "^7.0.1",
 		"svelte": "^3.57.0",
 		"svelte-check": "^3.1.4",
