--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"typecheck": "tsc --noEmit",
+		"typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt"
 	},
 	"prisma": {
 		"seed": "npx tsx prisma/seed.ts"
