Use GitHub Actions #451 add typecheck section

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ on:
     branches:
       - main
 
-concurrency:
-  group: ci-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ci-${{ github.event.pull_request.number || github.ref }}
+#   cancel-in-progress: true
 
 jobs:
   lint:
@@ -20,7 +20,18 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install
-        run: npm install
+        run: npm i
 
       - name: Lint
         run: npm run lint
+
+  typecheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install
+        run: npm i
+
+      - name: Typecheck
+        run: npm run typecheck˝
