--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,13 @@ jobs:
       - name: Create .env
         run: |
           touch .env
-          echo GMAIL_USER="test" >> .env
+          echo SOUND_DIR={{ secrets.SOUND_DIR }} >> .env
+          echo GOOGLE_PROJECT_ID={{ secrets.GOOGLE_PROJECT_ID }} >> .env
+          echo GOOGLE_LOCATION={{ secrets.GOOGLE_LOCATION }} >> .env
+          echo MICROSOFT_SPEECH_KEY={{ secrets.MICROSOFT_SPEECH_KEY }} >> .env
+          echo DEEPL_AUTH_KEY={{ secrets.DEEPL_AUTH_KEY }} >> .env
+          echo GMAIL_USER={{ secrets.GMAIL_USER }} >> .env
+          echo GMAIL_PASS={{ secrets.GMAIL_PASS }} >> .env
 
       - name: Build
         run: npm run build
@@ -84,6 +90,9 @@ jobs:
 
       - name: Install
         run: npm i
+
+      - name: Install Playwright
+        run: npx playwright install
 
       - name: Prisma generate
         run: npx prisma generate
