--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
 
-      - name: Install
-        run: npm i
+      - name: Install dependencies
+        run: npm ci
 
       - name: Lint
         run: npm run lint
@@ -32,8 +32,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
 
-      - name: Install
-        run: npm i
+      - name: Install dependencies
+        run: npm ci
 
       - name: Create .env
         run: |
@@ -88,11 +88,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
 
-      - name: Install
-        run: npm i
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Install Playwright
-        run: npx playwright install
+      # https://playwright.dev/docs/ci-intro
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: Prisma generate
         run: npx prisma generate
