--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,55 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Prisma generate
+        run: npx prisma generate
+
+      - name: Prisma migrate
+        run: npx prisma migrate deploy
+
+      - name: Seeder generate
+        run: npx prisma db seed
+
+      - name: Test
+        run: npm run test:ci
+
+  test_e2e:
+    name: Run end-to-end tests
+    runs-on: ubuntu-latest
+
+    timeout-minutes: 1
+
+    env:
+      DATABASE_URL: mysql://root:root@127.0.0.1:3306/test
+
+    services:
+      mysql:
+        image: mysql
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_DATABASE: test
+          MYSQL_ROOT_USER: root
+          MYSQL_ROOT_PASSWORD: root
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        run: npm ci
+
       # https://playwright.dev/docs/ci-intro
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
@@ -105,4 +154,4 @@ jobs:
         run: npx prisma db seed
 
       - name: Test
-        run: npm run test:ci
+        run: npm run test:e2e
