--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   lint:
+    name: Lint Check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,6 +28,7 @@ jobs:
         run: npm run lint
 
   typecheck:
+    name: Type Check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -56,6 +58,7 @@ jobs:
           GMAIL_PASS: test
 
   test:
+    name: Vitest Tests
     runs-on: ubuntu-latest
 
     timeout-minutes: 10
@@ -104,7 +107,7 @@ jobs:
         run: npm run test:ci
 
   test_e2e:
-    name: Run end-to-end tests
+    name: Playwright Tests
     runs-on: ubuntu-latest
 
     timeout-minutes: 10
