--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,31 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
 
-      - uses: actions/checkout@v3
-
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
-
-      - name: Install dependencies
-        run: npm install
+      - uses: ./.github/actions/setup-and-cache
 
       - name: Lint
         run: npm run lint
@@ -53,52 +30,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
 
-      - uses: actions/checkout@v3
-
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Create .env
-        run: |
-          touch .env
-          echo DATABASE_URL={{ secrets.DATABASE_URL }} >> .env
-          echo SOUND_DIR={{ secrets.SOUND_DIR }} >> .env
-          echo GOOGLE_PROJECT_ID={{ secrets.GOOGLE_PROJECT_ID }} >> .env
-          echo GOOGLE_LOCATION={{ secrets.GOOGLE_LOCATION }} >> .env
-          echo MICROSOFT_SPEECH_KEY={{ secrets.MICROSOFT_SPEECH_KEY }} >> .env
-          echo DEEPL_AUTH_KEY={{ secrets.DEEPL_AUTH_KEY }} >> .env
-          echo GMAIL_USER={{ secrets.GMAIL_USER }} >> .env
-          echo GMAIL_PASS={{ secrets.GMAIL_PASS }} >> .env
-
-      - name: Build
-        run: npm run build
+      - uses: ./.github/actions/setup-and-cache
+      - uses: ./.github/actions/create-env-and-build
 
       - name: Typecheck
         run: npm run typecheck
-        env:
-          GMAIL_USER: test
-          GMAIL_PASS: test
 
   test:
     name: Vitest Tests
@@ -107,7 +44,7 @@ jobs:
     timeout-minutes: 10
 
     env:
-      DATABASE_URL: mysql://root:root@127.0.0.1:3306/test
+      DATABASE_URL: mysql://root:rootroot@127.0.0.1:3306/talk
 
     services:
       mysql:
@@ -115,9 +52,9 @@ jobs:
         ports:
           - 3306:3306
         env:
-          MYSQL_DATABASE: test
+          MYSQL_DATABASE: talk
           MYSQL_ROOT_USER: root
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: rootroot
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
       redis:
@@ -132,55 +69,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
 
-      - uses: actions/checkout@v3
-
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Create .env
-        run: |
-          touch .env
-          echo DATABASE_URL={{ secrets.DATABASE_URL }} >> .env
-          echo SOUND_DIR={{ secrets.SOUND_DIR }} >> .env
-          echo GOOGLE_PROJECT_ID={{ secrets.GOOGLE_PROJECT_ID }} >> .env
-          echo GOOGLE_LOCATION={{ secrets.GOOGLE_LOCATION }} >> .env
-          echo MICROSOFT_SPEECH_KEY={{ secrets.MICROSOFT_SPEECH_KEY }} >> .env
-          echo DEEPL_AUTH_KEY={{ secrets.DEEPL_AUTH_KEY }} >> .env
-          echo GMAIL_USER={{ secrets.GMAIL_USER }} >> .env
-          echo GMAIL_PASS={{ secrets.GMAIL_PASS }} >> .env
-
-      - name: Prisma generate
-        run: npx prisma generate
-
-      - name: Prisma migrate
-        run: npx prisma migrate deploy
-
-      - name: Seeder generate
-        run: npx prisma db seed
-
-      - name: Build
-        run: npm run build
+      - uses: ./.github/actions/setup-and-cache
+      - uses: ./.github/actions/prisma
+      - uses: ./.github/actions/create-env-and-build
 
       - name: Test
         run: npm run test:ci
@@ -192,7 +84,7 @@ jobs:
     timeout-minutes: 10
 
     env:
-      DATABASE_URL: mysql://root:root@127.0.0.1:3306/test
+      DATABASE_URL: mysql://root:rootroot@127.0.0.1:3306/talk
 
     services:
       mysql:
@@ -200,9 +92,9 @@ jobs:
         ports:
           - 3306:3306
         env:
-          MYSQL_DATABASE: test
+          MYSQL_DATABASE: talk
           MYSQL_ROOT_USER: root
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: rootroot
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
       redis:
@@ -217,7 +109,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
@@ -225,58 +116,14 @@ jobs:
         with:
           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
-      - uses: actions/checkout@v3
-
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Create .env
-        run: |
-          touch .env
-          echo DATABASE_URL={{ secrets.DATABASE_URL }} >> .env
-          echo SOUND_DIR={{ secrets.SOUND_DIR }} >> .env
-          echo GOOGLE_PROJECT_ID={{ secrets.GOOGLE_PROJECT_ID }} >> .env
-          echo GOOGLE_LOCATION={{ secrets.GOOGLE_LOCATION }} >> .env
-          echo MICROSOFT_SPEECH_KEY={{ secrets.MICROSOFT_SPEECH_KEY }} >> .env
-          echo DEEPL_AUTH_KEY={{ secrets.DEEPL_AUTH_KEY }} >> .env
-          echo GMAIL_USER={{ secrets.GMAIL_USER }} >> .env
-          echo GMAIL_PASS={{ secrets.GMAIL_PASS }} >> .env
-
-      - name: Prisma generate
-        run: npx prisma generate
-
-      - name: Prisma migrate
-        run: npx prisma migrate deploy
-
-      - name: Seeder generate
-        run: npx prisma db seed
+      - uses: ./.github/actions/prisma
 
       # https://playwright.dev/docs/ci-intro
       - name: Install Playwright Browsers
         run: npx playwright install chromium
         # run: npx playwright install --with-deps
 
-      - name: Build
-        run: npm run build
+      - uses: ./.github/actions/create-env-and-build
 
       - name: Test
         run: npm run test:e2e
