--- a/.github/actions/setup-and-cache/action.yml
+++ b/.github/actions/setup-and-cache/action.yml
@@ -23,7 +23,9 @@ runs:
     - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
       name: List the state of node modules
       continue-on-error: true
+      shell: bash
       run: npm list
 
     - name: Install dependencies
+      shell: bash
       run: npm install
