--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"svelte-check": "^3.1.4",
 		"svelte-preprocess": "^5.0.3",
 		"tailwindcss": "^3.3.0",
+		"tailwindcss-dir": "^4.0.0",
 		"tslib": "^2.5.0",
 		"tsx": "^3.12.6",
 		"typescript": "^5.0.2",
