Add code runner to recommended extensions #480

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -30,6 +30,7 @@
 		"wix.vscode-import-cost",
 		"christian-kohler.path-intellisense",
 		"chakrounanas.turbo-console-log",
-		"github.vscode-github-actions"
+		"github.vscode-github-actions",
+		"formulahendry.code-runner"
 	]
 }
