Allow linking in chat #507

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,8 @@
 		"Menlo",
 		"msedge",
 		"Neue",
+		"noopener",
+		"noreferrer",
 		"Noto",
 		"Piseth",
 		"protos",
@@ -37,6 +39,7 @@
 		"texttospeech",
 		"Todos",
 		"Upvote",
+		"Urlify",
 		"uuidv",
 		"viewports",
 		"Wavenet"
