--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,9 +32,19 @@ http {
 
     #gzip  on;
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     server {
         listen      80;
         server_name localhost;
+
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
 
         location / {
             proxy_pass http://localhost:3000;
