--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/express": "^4.17.17",
 		"@types/morgan": "^1.9.4",
 		"@types/nodemailer": "^6.4.7",
+		"@types/nprogress": "^0.2.0",
 		"@types/redis": "^4.0.11",
 		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -77,6 +78,7 @@
 		"microsoft-cognitiveservices-speech-sdk": "^1.26.0",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.1",
+		"nprogress": "^0.2.0",
 		"redis": "^4.6.5",
 		"socket.io": "^4.6.1",
 		"socket.io-client": "^4.6.1",
