--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@sveltejs/kit": "^1.15.2",
 		"@types/dom-speech-recognition": "^0.0.1",
 		"@types/express": "^4.17.17",
+		"@types/imap-simple": "^4.2.5",
 		"@types/morgan": "^1.9.4",
 		"@types/nodemailer": "^6.4.7",
 		"@types/nprogress": "^0.2.0",
@@ -45,6 +46,7 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"husky": "^8.0.3",
+		"imap-simple": "^5.1.0",
 		"lint-staged": "^13.2.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.7",
