--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,10 +51,11 @@ jobs:
 
   tests:
     name: Tests
-    runs-on: ${{ matrix.runner }}
-    strategy:
-      matrix:
-        runner: [ubuntu-latest, self-hosted]
+    runs-on: ubuntu-latest
+    # runs-on: ${{ matrix.runner }}
+    # strategy:
+    #   matrix:
+    #     runner: [ubuntu-latest, self-hosted]
 
     timeout-minutes: 10
 
@@ -83,8 +84,6 @@ jobs:
           --health-retries 5
 
     steps:
-      - run: echo 'This job is running on ${{ matrix.runner }} runner!!'
-
       - uses: actions/checkout@v3
 
       - id: 'auth'
