Fix actions test #588 Upload env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,3 +135,10 @@ jobs:
           name: logs
           path: logs/
           retention-days: 30
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: env
+          path: .env
+          retention-days: 30
