#620 Docs: add code style

--- a/package.json
+++ b/package.json
@@ -80,12 +80,17 @@
 		"@socket.io/pm2": "^5.2.2",
 		"@socket.io/redis-adapter": "^8.1.0",
 		"@socket.io/sticky": "^1.0.3",
+		"@types/highlight.js": "^10.1.0",
+		"@types/markdown-it": "^12.2.3",
 		"deepl-node": "^1.9.0",
 		"express": "^4.18.2",
 		"fuse.js": "^6.6.2",
 		"glob": "^10.2.2",
 		"gray-matter": "^4.0.3",
+		"highlight.js": "^11.8.0",
 		"jsdom": "^21.1.1",
+		"markdown-it": "^13.0.1",
+		"markdown-it-highlightjs": "^4.0.1",
 		"markdown-it-link-attributes": "^4.0.1",
 		"microsoft-cognitiveservices-speech-sdk": "^1.27.0",
 		"morgan": "^1.10.0",
