Docs: VSCode Extensions #634

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
 	],
 	"eslint.validate": ["svelte"],
 	"cSpell.words": [
+		"autocompletes",
 		"autoincrement",
 		"codegen",
 		"cognitiveservices",
@@ -36,6 +37,7 @@
 		"Segoe",
 		"sinproject",
 		"stylelint",
+		"Tabnine",
 		"tailwindcss",
 		"testid",
 		"textbox",
