Run npm run check on pre-commit and CI #639

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Type Check
         run: npm run typecheck
 
+      - name: Svelte Check
+        run: npm run check
+
   tests:
     name: Tests
     runs-on: ubuntu-latest
