Add Pretty to extensions.json #641

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -18,6 +18,7 @@
 		"bradlc.vscode-tailwindcss",
 		"ms-vsliveshare.vsliveshare",
 		"usernamehw.errorlens",
+		"yoavbls.pretty-ts-errors",
 		"igorsbitnev.error-gutters",
 		"formulahendry.auto-rename-tag",
 		"pranaygp.vscode-css-peek",
