--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,11 +33,13 @@
 		"Noto",
 		"nprogress",
 		"Piseth",
+		"pixabay",
 		"protos",
 		"Roboto",
 		"Segoe",
 		"sinproject",
 		"stylelint",
+		"tabler",
 		"Tabnine",
 		"tailwindcss",
 		"testid",
