Docs: macOS Settings #749

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
 		"Consolas",
 		"datasource",
 		"deepl",
+		"Halfwidth",
 		"highlightjs",
 		"imaps",
 		"iwasaki",
@@ -46,6 +47,7 @@
 		"textbox",
 		"texttospeech",
 		"Todos",
+		"Trackpad",
 		"typecheck",
 		"Upvote",
 		"Urlify",
