Docs: Templates #720 adjust playwright test

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"test:run": "vitest run",
 		"test:e2e": "playwright test",
 		"test:ci": "CI=true npm run test",
+		"test:e2e:ci": "CI=true npm run test:e2e",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
