Support profile icon #536 Show in chat

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@
 
 DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
 SOUND_DIR="/Users/iwasakishinya/development/talk/.data/"
+AVATAR_DIR="/Users/iwasakishinya/development/talk/.data/avatars"
 
 GOOGLE_PROJECT_ID="XXX"
 GOOGLE_LOCATION='XXX'
