Update .env.example #780

--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
-SOUND_DIR="/Users/iwasakishinya/development/talk/.data/"
+DATABASE_URL="mysql://root:password@localhost:3306/talk"
+SOUND_DIR="./.data/"
 
 GOOGLE_PROJECT_ID="XXX"
-GOOGLE_LOCATION='XXX'
+GOOGLE_LOCATION='us-central1'
 MICROSOFT_SPEECH_KEY="XXX"
 DEEPL_AUTH_KEY="{deepl-auth-key}"
 
